java-web-app/src/main/webapp/styles/general.css
:root {
  --color: #a14198;
}

* {
  font-family: 'Poppins', sans-serif;
}

body {
  margin: 0;
  min-height: 100vh;
  min-width: 100vw;
  background-color: #F6F6F6;
  display: flex;
  flex-direction: column;
  align-items: center;
}

body>header {
  border-bottom: 5px solid var(--color);
  display: flex;
  width: 100vw;
  height: 7vh;
  align-items: center;
  box-shadow: 1px 0px 15px 1px rgba(0, 0, 0, 0.321);
}

.quick-access {
  display: flex;
  align-items: center;
}

.quick-access p {
  font-size: 16px;
}

a {
  color: inherit;
  text-decoration: none;
}

.login-access {
  display: flex;
  align-items: center;
  cursor: pointer;
  padding-right: 8vw;
}

.login-access p {
  font-size: 18px;
}

.line {
  margin-left: 2vw;
  width: 0.001px;
  height: 3vh;
  border: 1px solid grey;
}

.representation-img {
  height: 32px;
  width: 32px;
  z-index: 1000;
}

#warning {
  color: rgb(222, 19, 19);
  text-align: center;
}

